// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fills the a simple slot 1`] = `
<div>
  <div>
    <button>
      Home 1
    </button>
  </div>
</div>
`;

exports[`Fills the appropriate slot 1`] = `
<div>
  <div>
    <button>
      Home 2
    </button>
    <button>
      About
    </button>
  </div>
  <div>
    <a
      href="twitter.com/reactjs"
    >
      Twitter
    </a>
  </div>
  <div />
</div>
`;

exports[`Replaces the contents of the slot with the matching fill when the slot's \`name\` property changes 1`] = `
<div>
  <div>
    <span>
      Home 1
    </span>
  </div>
  <div>
    ,
    ,
  </div>
</div>
`;

exports[`allows slots to render null 1`] = `<div />`;
